# luci

./: .gitignore  Cargo.toml  rustfmt.toml  schema.yaml
.github/workflows/: validate-yaml.yml
src/: bindings.rs  execution.rs  execution_graph.rs  graphics.rs  lib.rs  main.rs  marshalling.rs  messages.rs  names.rs  recorder.rs  scenario.rs  visualization.rs
src/execution/: build.rs  display.rs  graphics.rs  keys.rs  names.rs  report.rs  runner.rs  sources.rs  visualization.rs
src/execution_graph/: build.rs  runner.rs
src/recorder/: records.rs
src/scenario/: graphics.rs  no_extra.rs  subs.rs  visualization.rs
tests/: echo.rs  ping_pong.rs  recv_timeout.rs  source_loading.rs  subroutines.rs  syntax.rs
tests/echo/: bind-node.luci.yaml  bind-node.yaml  check-init-bind.luci.yaml  marshalling.yaml  request-response.luci.yaml  request-response.yaml
tests/luci_graph/: sample.yml
tests/ping_pong/: test-no-peers.yaml  test-one-peer.yaml
tests/recv_timeout/: no-timeouts.luci.yaml  no-timeouts.yaml  with-intervals.luci.yaml  with-timeouts.luci.yaml  with-timeouts.yaml
tests/snapshots/: source_loading__00.a.snap  source_loading__00.snap  source_loading__01.a.snap  source_loading__01.snap  source_loading__02.a.snap  source_loading__02.snap  source_loading__03.snap  source_loading__04.snap  syntax__01-minimal-debug.snap  syntax__01-minimal-yaml.snap  syntax__02-with-types-debug.snap  syntax__02-with-types-yaml.snap  syntax__03-with-actors-debug.snap  syntax__03-with-actors-yaml.snap  syntax__04-with-single-bind-debug.snap  syntax__04-with-single-bind-yaml.snap  syntax__05-with-single-send-debug.snap  syntax__05-with-single-send-yaml.snap  syntax__07-with-single-respond-debug.snap  (+5 more)
(+33 files in other folders)
