[package]
name = "luci"
version = "0.1.0"
edition = "2021"

[features]
default = []
backwards-compatibility = []

[lib]
name = "luci"
path = "src/lib.rs"

[[bin]]
name = "luci"
path = "src/bin/luci_graph.rs"

[dependencies]
bimap = "^0.6"
derive_more = { version = "^2.0.1", features = ["debug", "from"] }
futures = "^0.3"
ghost = "^0.1"
humantime-serde = "1"
insta = { version = "^1", features = ["yaml"] }
parking_lot = "^0.12"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.9"
slotmap = { version = "^1" }
thiserror = "^1"
tokio = { version = "^1", features = ["test-util", "time"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
clap = { version = "^4", features = ["derive"] }
dot-writer = { version = "^0.1" }

elfo = { version = "0.2.0-alpha.18", features = ["test-util"] }
elfo-configurer = { version = "0.2.0-alpha.18" }

[dev-dependencies]
insta = { version = "^1.43" }
test-case = { version = "^3.3" }
